# hs-windows-iocp

./: LICENSE  windows-iocp.cabal
IOCP/: Bindings.hsc  CompletionPort.hsc  Manager.hsc  Mswsock.hsc  Types.hsc  Utils.hs  Windows.hsc  Winsock.hsc
IOCP/Winsock/: Bindings.hsc  Load.hsc  Mswsock.hsc  Types.hsc
Network/Socket/: Windows.hs  Windows.hsc
cbits/: Winsock.c  iocp.c
include/: errno-posix.h  iocp.h
lab/: bench-getLastError.hs  connect.hs
test/: Main.hs
