name: windows-iocp
version: 0.1
synopsis: Playground for implementing interruptible I/O on Windows using completion ports
-- description:
homepage: https://github.com/joeyadams/hs-windows-iocp
bug-reports: https://github.com/joeyadams/hs-windows-iocp/issues/new
license: BSD3
license-file: LICENSE
author: Joey Adams
maintainer: joeyadams3.14159@gmail.com
copyright: Copyright (c) Joseph Adams 2013
category: System
build-type: Simple
cabal-version: >= 1.14

extra-source-files: include/iocp.h

source-repository head
    type:       git
    location:   https://github.com/joeyadams/hs-windows-iocp

library
    exposed-modules:
        IOCP.Bindings
        IOCP.CompletionPort
        IOCP.Manager
        IOCP.Utils
        IOCP.Windows
        IOCP.Winsock
        IOCP.Winsock.Bindings
        IOCP.Winsock.Load
        IOCP.Winsock.Types

    other-modules:
        IOCP.Types

    build-tools: hsc2hs

    ghc-options: -Wall -fwarn-tabs
    cc-options: -Wall

    c-sources:
        cbits/iocp.c
        cbits/Winsock.c

    include-dirs: include
    includes: iocp.h

    build-depends: base >= 4.6 && < 5

    extra-libraries: ws2_32

    default-language: Haskell2010

test-suite test
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        Main.hs

    build-depends: base
                 , windows-iocp

    ghc-options: -Wall -fwarn-tabs

    default-language: Haskell2010
