name:               windows-iocp
version:            0.1
synopsis:           I/O manager for Windows based on completion ports
-- description:
homepage:           https://github.com/joeyadams/hs-windows-iocp
bug-reports:        https://github.com/joeyadams/hs-windows-iocp/issues/new
license:            BSD3
license-file:       LICENSE
author:             Joey Adams
maintainer:         joeyadams3.14159@gmail.com
copyright:          Copyright (c) Joseph Adams 2013
category:           System
build-type:         Simple
cabal-version:      >= 1.14

extra-source-files: include/iocp.h include/errno-posix.h

source-repository head
    type:       git
    location:   https://github.com/joeyadams/hs-windows-iocp

library
    exposed-modules:
        IOCP.Manager
        IOCP.Windows

    other-modules:
        IOCP.CompletionPort
        IOCP.Utils

    build-tools: hsc2hs

    ghc-options: -Wall -fwarn-tabs
    cc-options: -Wall

    c-sources:
        cbits/iocp.c

    include-dirs: include
    includes: iocp.h errno-posix.h

    build-depends: base >= 4.6 && < 5
                 , bytestring

    default-language: Haskell2010

test-suite test
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        Main.hs

    build-depends: base
                 , windows-iocp

    ghc-options: -Wall -fwarn-tabs

    default-language: Haskell2010
